# lively

./: .gitignore  0f59abff9c1cfe69.wasm  404.html  8a53e32122ec87f1.module.wasm  Cargo.toml  LICENSE  README.md  index.html  install-rust.sh  publish.sh  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: npm-publish.yml  python-package.yml  python-publish.yml  test.yml
LivelyDocumentation/: docusaurus.config.js  package.json  sidebars.js  tutorialSidebar.js
LivelyDocumentation/docs/: intro.md
LivelyDocumentation/docs/API/: collision.mdx  shapes.mdx  state.mdx
LivelyDocumentation/docs/Configuration/: _category_.yaml  collision_settings.mdx  initial_state.mdx  max_iterations.mdx  max_retries.mdx  objectives.mdx  root_bounds.mdx  shapes.mdx  urdf.mdx
LivelyDocumentation/docs/Goals/: _category_.yaml  goal.mdx
LivelyDocumentation/docs/Objectives/: _category_.yaml  objective.mdx
LivelyDocumentation/docs/Others/: _category_.json  optimize.mdx
LivelyDocumentation/docs/Solver/: _category_.yaml  solver.mdx
LivelyDocumentation/docs/Solving/: _category_.yaml
LivelyDocumentation/docs/tutorial-basics/: configuration.mdx  rust.rs
LivelyDocumentation/src/css/: custom.css
LivelyDocumentation/src/pages/: index.js
LivelyDocumentation/toturial/: toturial.md
assets/css/: styles.2306bc29.css  styles.d69ef263.css
assets/js/: 029d9d58.7a31ef13.js  02f5faf3.18b57c69.js  02f5faf3.a087a529.js  02f5faf3.cfa1b124.js  0bbf031f.53932d54.js  0bbf031f.59e9628d.js  0ff87af2.11e40f40.js  0ff87af2.2fae72bc.js  0ff87af2.306b4175.js  0ff87af2.b33de4a5.js  1071.1551a56a.js  1071.7fe076b2.js  132bdbf2.283a4d66.js  132bdbf2.5c7c2fad.js  132bdbf2.68c18c31.js  132bdbf2.6904aa68.js  14eb3368.0483dea0.js  14eb3368.190fef8b.js  17601c47.12d02c9f.js  17601c47.2f25e7b3.js  17601c47.d6a1263e.js  17896441.21bfe97d.js  17896441.b31cc5f5.js  1b466be5.d9e54e0b.js  1be78505.464afef3.js  1be78505.8db9ea5b.js  1f391b9e.5ee3f617.js  1f391b9e.7f986848.js  1f391b9e.be231b74.js  209.560d3251.js  2116dfc2.097673cb.js  2116dfc2.73397ee6.js  2116dfc2.90601c27.js  230.1760fa7e.js  230.3f660c0b.js  230.f11d4e71.js  2366.b398c0a4.js  2366.e5927c03.js  2cd204e9.121db8db.js  2cd204e9.511ce2f3.js  (+167 more)
doc_src/: docusaurus.config.js  package.json  sidebars.js
doc_src/docs/API/: collision.mdx  index.md  index.mdx  shapes.mdx  state.mdx
doc_src/docs/Tutorials/: adding_goals.md  adding_goals.mdx  adding_objectives.md  adding_objectives.mdx  advanced_initialization.md  advanced_initialization.mdx  environment-sine.mdx  environment.md  environment.mdx  index.md  initialization.md  initialization.mdx  initialization_hook.mdx  installation.md  installation.mdx  liveliness.md  liveliness.mdx  social.mdx  solving.md  solving.mdx
doc_src/plugins/mesh-loader/: index.js
doc_src/src/css/: custom.css
doc_src/src/pages/: index.js
doc_src/static/img/: 3d.afdesign
docs/: 01ed1b7fe63720af.wasm  404.html  docusaurus.config.js  fea9482cdd0c2d6c.wasm  index.html  markdown-page.html  package.json  sidebars.js  sitemap.xml
docs/API/: index.html
docs/API/Info/: index.html
docs/API/Objectives/: index.html
docs/API/Shapes/: index.html
docs/API/Solver/: index.html
docs/API/collision/: index.html
docs/API/state/: index.html
docs/Tutorials/: index.html
docs/Tutorials/adding_goals/: index.html
docs/Tutorials/adding_objectives/: index.html
docs/Tutorials/advanced_initialization/: index.html
docs/Tutorials/environment/: index.html
docs/Tutorials/environment-sine/: index.html
docs/Tutorials/initialization/: index.html
docs/Tutorials/installation/: index.html
docs/Tutorials/liveliness/: index.html
docs/Tutorials/social/: index.html
docs/Tutorials/solving/: index.html
docs/assets/css/: styles.d8eb56d2.css
docs/assets/js/: 029d9d58.49fcede8.js  02f5faf3.c9446865.js  0ff87af2.30a577d4.js  132bdbf2.5898c56f.js  132bdbf2.83b780fe.js  14eb3368.1b2ede04.js  17601c47.e2c40982.js  17896441.6bdf1973.js  17896441.cd3e25f0.js  17896441.cee16747.js  1be78505.96019af6.js  1f391b9e.a3c44076.js  1f391b9e.c2f745c1.js  2116dfc2.85ac723a.js  2fb7af30.7189b9bb.js  38e540da.f307fb15.js  (+41 more)
docs/docs/: API.html  Tutorials.html
docs/markdown-page/: index.html
examples/: basic_initialization_example.rs  bevy.rs  empty.rs  liveliness_example.rs  puffin.rs  solving_example.rs
examples/js_examples/: basic.mjs  basic_initialization_example.ipynb  basic_initialization_example.js
examples/python_examples/: advanced_initialization_example.ipynb  basic_initialization_example.ipynb  environmental_example.ipynb  liveliness_example.ipynb  social_robot_example.ipynb  solving_example.ipynb
examples/rust_examples/: advanced_initialization_example.rs  basic_initialization_example.rs  bevy.rs  box.rs  environmental_modeling_example.rs  puffin.rs  renderer.rs  social_robot_example.rs  solving_example.rs
img/Shapes _ Lively_files/: styles.css
lively/: __init__.py
lively_ik_core/: __init__.py
lively_tk/: __init__.py  lively_tk.cp39-win_amd64.pyd
lively_tk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
markdown-page/: index.html
src/: lib.rs  lively.rs  lively_tk.rs  relaxed_ik.rs
src/groove/: collision_nn.rs  env_collision.rs  gradient.rs  groove.rs  liveliness.rs  mod.rs  objective.rs  objective_master.rs  perlin.rs  vars.rs
src/manager/: behavior_properties.rs  edge.rs  manager.rs  mod.rs  node.rs
src/objectives/: mod.rs  objective.rs
src/spacetime/: arm.rs  robot.rs
src/utils/: collision_manager.rs  collision_object.rs  config.rs  conversions.rs  general.rs  geometry.rs  goals.rs  history.rs  info.rs  mod.rs  objective_set.rs  pyutils.rs  robot_model.rs  robot_shape_model.rs  sampler.rs  self_collision_engine.rs  settings.rs  shapes.rs  state.rs  transformations.rs  vars.rs  yaml_utils.rs
tests/: basic.xml  collision.rs  graphs.ipynb  nao.json  nao.xml  panda.json  panda.xml  pepper.xml  quaternion_testing.ipynb  toolkit_testing.ipynb  toolkit_wrappers.ipynb  ur3e.xml  urdf_load.py
tests/.ipynb_checkpoints/: toolkit_testing-checkpoint.ipynb  toolkit_wrappers-checkpoint.ipynb
(+625 files in other folders)
