[package]
name = "lively_tk"
version = "0.10.0"
description = "A real-time robot control framework with liveliness."
repository = "https://github.com/Wisc-HCI/lively_tk"
homepage = "https://wisc-hci.github.io/lively_tk/"
license = "MIT"
authors = ["djrakita <djrakita@gmail.com>","andrewjschoen <schoen.andrewj@gmail.com>"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
pybindings = ["pyo3","pyo3-log"]
jsbindings = ["wasm-bindgen","console_error_panic_hook"]
profile-with-puffin = ["profiling/profile-with-puffin"]


[dependencies]
# Benchmarking
rafx = { version = "=0.0.14", features = ["rafx-vulkan", "framework"], optional = true }
winit = {version = "0.25", optional = true}
bincode = {version = "1.3.1", optional = true}
lazy_static = {version = "1", optional = true}
imgui = {version = "0.8", optional = true}
imgui-winit-support = {version = "0.8", optional = true}
puffin-imgui = {version = "0.15.0", optional = true}
glam = {version = "0.8.6", optional = true}
puffin = { version = "0.12.1", optional = true}
env_logger = {version = "0.6", optional = true}
tracing-tracy = { version = "0.4.0" , optional = true}
tracing-subscriber = { version = "0.2" , optional = true}
profiling = { version = "1.0" , optional = true}

nalgebra = { version = "0.31", features = ["serde-serialize-no-std"]}
bevy_transform_gizmo = "0.3.1"
bevy_mod_picking = "0.9"
array2d = "0.2.1"
parry3d-f64 = "0.9.0"
yaml-rust = "0.4"
# optimization_engine = { version = "0.7.4", features = ["wasm"] }
optimization_engine = {git = "https://github.com/yepw/optimization-engine"}
ndarray = "0.13.0"
num = "0.2.0"
# nlopt = "0.5.1"
rand = "0.8.1"
noise = "0.7.0"
k = {git = "https://github.com/AndrewJSchoen/k"}
# k = { version = "0.28.0" }
urdf-rs = "0.6.6"
serde = { version = "1.0", features = ["derive"]}
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"], optional = true }
getrandom = { version = "0.2", features = ["js"] }
pyo3 = {version = "0.16.5", features = ["extension-module"], optional = true}
pyo3-log = {version = "0.6.0", optional = true}
log = {version = "0.4.14"}
console_error_panic_hook = { version = "0.1.7", optional = true }
instant = { version = "0.1", features = [ "stdweb" ] }
indexmap = "1.9.1"
bevy = "0.8"
smooth-bevy-cameras = {git = "https://github.com/bonsairobo/smooth-bevy-cameras"}
nalgebra-py = "0.3.1"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
debug = true
codegen-units = 1

[lib]
name = "lively_tk"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]